# manifest-creator

./: .gitignore  LICENSE  Makefile  README.md  ipc_plugin_main.py  metadata.json  plugin.json  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml  release.yml
PCM/: create_pcm_archive.sh  metadata.template.json
PCM/archive/: metadata.json
PCM/archive/plugins/: README.md  ipc_plugin_main.py
lib/attrs-26.1.0.dist-info/: RECORD
lib/cffi-2.0.0.dist-info/: RECORD
lib/jsonschema-4.25.1.dist-info/: RECORD
lib/jsonschema_specifications-2025.9.1.dist-info/: RECORD
lib/kicad_python-0.7.1.dist-info/: METADATA  RECORD  entry_points.txt
lib/kipy/: __init__.py  board.py  board_jobs.py  board_rules.py  board_types.py  client.py  common_types.py  errors.py  geometry.py  kicad.py  kicad_api_version.py  project.py  project_types.py  schematic.py  schematic_types.py  server.py  wizards.py  wrapper.py
lib/kipy/packaging/: __init__.py  __main__.py  cli.py  types.py  validate.py
lib/kipy/util/: proto.py  (+2 more)
lib/protobuf-5.29.6.dist-info/: RECORD
lib/pycparser-2.23.dist-info/: RECORD
lib/pynng/: _version.py
lib/pynng-0.9.0.dist-info/: METADATA  RECORD  WHEEL
lib/referencing-0.36.2.dist-info/: RECORD
lib/rpds_py-0.27.1.dist-info/: RECORD
manifest_creator/: __main__.py  bom_export.py  footprint_export.py  footprint_svg_export.py  log_dialog.py  log_writer.py  packager.py  svg_export.py
tests/: conftest.py  test_bom_export.py  test_footprint_export.py  test_kiutils_integration.py  test_log_dialog.py  test_packager.py  test_svg_export.py
(+43 files in other folders)
